--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<h2>GABBY MOLINA</h2>
 				</div>
 				<div class="social-media-links">
-					
+					<a href="https://www.linkedin.com/in/gabbymolina" target="blank"><img src="imgs/linkedin.png"><a/>
 					<a href="#"><img src="imgs/tumblr.png"></a><!-- tumblr -->
-					<a href="#"><img src="imgs/github.jpg"></a><!-- github -->
+					<a href="https://github.com/GabbyMolina/gabbymolina.github.io" target="blank"><img src="imgs/github.jpg"></a><!-- github -->
 					
 				</div>
 			</header>
